--- a/assets/scss/module/_header.scss
+++ b/assets/scss/module/_header.scss
@@ -40,7 +40,8 @@
             }
 
             @media #{$maxSmall} {
-                width: 100px;
+                width : 100px;
+                height: auto;
             }
         }
     }
